<resources>
    <string name="app_name">Dheket User</string>
    <string name="loading">Please wait...</string>
    <string name="signUpEmail">Sign up with e-mail</string>
    <!--591231707696050 sudi-->
    <!--247131345667676 supri-->
    <string name="facebook_app_id">591231707696050</string>
    <string name="logout">Log Out</string>
    <string name="category1">Category 1</string>
    <string name="category2">Category 2</string>
    <string name="category3">Category 3</string>
    <string name="category4">Category 4</string>
    <string name="category5">Category 5</string>
    <string name="search">Search</string>
    <string name="user_instruction">Rotate the map using two fingers and a pinch gesture. Single tap to reset.</string>
    <string name="startup_caption">What do you need?</string>

    <string name="link_getLocationPromo">http://ws.dheket.com/index.php/BELUM</string>
    <string name="link_getDetailLocationPromo">http://ws.dheket.com/index.php/BELUM</string>
    <string name="link_getAllCategory">http://ws.dheket.com/index.php/getallcategory</string> <!--getallcategory-->
    <string name="link_getHashtagByCatId">http://ws.dheket.com/index.php/getallhashtagbycatid</string><!--getallhashtagbycatid/{cat_id}-->
    <string name="link_getSingleLocationById">http://ws.dheket.com/index.php/getlocationbylocationid</string> <!--getlocationbylocationid/{center_lat}/{center_lng}/{loc_id}-->
    <string name="link_getLocationByCategory">http://ws.dheket.com/index.php/getlocationbycategoryid</string> <!--getlocationbycategoryid/{rad}/{center_lat}/{center_lng}/{cat}-->
    <string name="link_getLocationAndMerchByCategory">http://ws.dheket.com/index.php/getlocationandmerchbycategoryid</string> <!--getlocationandmerchbycategoryid/{rad}/{center_lat}/{center_lng}/{cat}-->
    <string name="link_getDataUser">http://ws.dheket.com/index.php/getprofileuserbyemail</string> <!--getprofileuserbyemail/{email}/{center_lat}/{center_lng}-->
    <string name="link_getUserConfig">http://ws.dheket.com/index.php/getconfigurationuserbyemail</string> <!--getconfigurationuserbyemail/{email}-->
    <string name="link_cekUserLogin">http://ws.dheket.com/index.php/checkexistinguserbyemail</string><!--checkexistinguserbyemail/{email}/{lat}/{lng}-->
    <string name="link_cekExistingUser">http://ws.dheket.com/index.php/cekOrgetCustomerByEmail</string><!--cekOrgetCustomerByEmail/{email}-->
    <string name="link_updateRadiusByEmail">http://ws.dheket.com/index.php/saveradbyemail/</string><!--saveradbyemail/ {"email"="a@m.c","rad"=5}-->
    <string name="link_updateCategoryUserByEmail">http://ws.dheket.com/index.php/createorupdatecatuserbyemail/</string> <!--updatecatuserbyemail/ {"email"="a@m.c","cat_old"=1,"cat_new"=2}-->
    <string name="link_updateHashtagUserByEmail">http://ws.dheket.com/index.php/updatetagcatuserbyemail/</string> <!--updatetagcatuserbyemail/ {"email"="a@m.c","cat_old"=1,"cat_new"=2}-->
    <string name="link_addUserCustomerByEmail">http://ws.dheket.com/index.php/addprofileusercustomerbyemail/</string><!--addprofileusercustomerbyemail/{"email"="a@m.c","username"="u","password"="**","facebook_id"="aaa"}-->
    <string name="link_getLocUserConfig">http://ws.dheket.com/index.php/getlocationprofileuserbyemail/</string><!--getlocationprofileuserbyemail/{email}/{center_lat}/{center_lng}-->

    <string name="menu_locate">Locate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="title_activity_main_chat">Dheket</string>

    <string name="type_your_message">Enter msg</string>
    <string name="NoRecent">No recent</string>

    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>
    <string name="user_test">User Test</string>
</resources>
