<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/buble_cat1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="10"
                        android:id="@+id/textView_total_cat1"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="200px"
                        android:layout_height="200px"
                        android:textAllCaps="false"
                        android:text="@string/category1"
                        android:id="@+id/btn_buble_cat1"
                        android:background="@drawable/buble"
                        android:layout_gravity="center_horizontal"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Promo: 0"
                        android:id="@+id/textView_promo_cat1"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/buble_cat2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="7"
                        android:id="@+id/textView_total_cat2"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="140px"
                        android:layout_height="140px"
                        android:textAllCaps="false"
                        android:text="@string/category2"
                        android:id="@+id/btn_buble_cat2"
                        android:background="@drawable/buble"
                        android:layout_gravity="center_horizontal"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Promo: 2"
                        android:id="@+id/textView_promo_cat2"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/buble_cat3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="15"
                        android:id="@+id/textView_total_cat3"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="200px"
                        android:layout_height="200px"
                        android:textAllCaps="false"
                        android:text="@string/category3"
                        android:id="@+id/btn_buble_cat3"
                        android:background="@drawable/buble"
                        android:layout_gravity="center_horizontal"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Promo: 0"
                        android:id="@+id/textView_promo_cat3"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:id="@+id/imageView_userProfile"
                    android:layout_gravity="center"
                    android:background="@drawable/ring"
                    android:layout_weight="1" />

                <com.bgs.common.ProfilePictureView_viaFB
                    android:layout_width="195dp"
                    android:layout_height="195dp"
                    android:id="@+id/view_userProfile"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="..."
                    android:id="@+id/textView_usrNm"
                    android:layout_gravity="center_horizontal|bottom"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:singleLine="true"
                    android:background="@drawable/roundedbutton_square"
                    android:textColor="#ffffff" />

            </FrameLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/buble_cat4"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="8"
                        android:id="@+id/textView_total_cat4"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="160px"
                        android:layout_height="160px"
                        android:textAllCaps="false"
                        android:text="@string/category4"
                        android:id="@+id/btn_buble_cat4"
                        android:background="@drawable/buble"
                        android:layout_gravity="center_horizontal"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Promo: 0"
                        android:id="@+id/textView_promo_cat4"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:id="@+id/buble_cat5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="5"
                        android:id="@+id/textView_total_cat5"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="100px"
                        android:layout_height="100px"
                        android:textAllCaps="false"
                        android:text="@string/category5"
                        android:id="@+id/btn_buble_cat5"
                        android:background="@drawable/buble"
                        android:layout_gravity="center_horizontal"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Promo: 4"
                        android:id="@+id/textView_promo_cat5"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:textAllCaps="false"
                android:text="@string/search"
                android:id="@+id/btn_search"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/roundedbutton_square1"
                android:textStyle="bold"
                android:textColor="#5e5b5b" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>